wip: Getting foundation in place for theme

--- a/boulderD9_base.info.yml
+++ b/boulderD9_base.info.yml
@@ -14,10 +14,15 @@ regions:
   secondary_menu: "Secondary Menu"
   alerts: "Alerts"
   breadcrumb: "Breadcrumb Navigation"
-  intro_wide: "Intro Wide"
-  slider: "Slider"
+  above_content: "Above Content"
   left_sidebar: "Left Sidebar"
   content: "Main Content"
   right_sidebar: "Right Sidebar"
+  below_content: "Below Content"
   social: "Social Media Menu"
+  footer_cta: "Footer Call-To-Action"
+  footer_nav_one: "Footer Navigation One"
+  footer_nav_two: "Footer Navigation Two"
+  footer_nav_three: "Footer Navigation Three"
+  footer_nav_four: "Footer Navigation Four"
   footer: "Footer"
