--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -13,10 +13,13 @@ ucb-global:
       css/styleguide/colors.css: {}
       css/styleguide/type.css: {}
       css/styleguide/icons.css: {}
+  ckeditor5-stylesheets: 
+    - css/base-ckeditor5.css
   js:
     js/bootstrap/bootstrap.min.js: {}
     js/fontawesome/all.min.js: {}
   dependencies: 
     - core/drupal
+
 
 
