--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -33,3 +33,9 @@ ucb-user-login:
   css:
     theme:
       css/ucb-user-login.css: {}
+
+ucb-site-contact-info-footer:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-site-contact-info-footer.css: {}
