--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -37,3 +37,11 @@ ucb-person:
   css:
     theme:
       css/ucb-person.css: {}
+      
+ucb-people-list-page:
+  version: 1.x
+  js:
+    js/ucb-people-list.js: {}
+  css:
+    theme:
+      css/ucb-people-list.css: {}
