--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -18,6 +18,7 @@ ucb-global:
   js:
     js/bootstrap/bootstrap.min.js: {}
     js/fontawesome/all.min.js: {}
+    js/ucb-rave-alert.js: {}
   dependencies: 
     - core/drupal
 
