--- a/config/install/boulderD9_base.settings.yml
+++ b/config/install/boulderD9_base.settings.yml
@@ -1,17 +1,18 @@
 features:
-  node_user_picture: true
-  comment_user_picture: true
-  comment_user_verification: true
-  favicon: true
+  node_user_picture: 1
+  comment_user_picture: 1
+  comment_user_verification: 1
+  favicon: 1
 logo:
-  use_default: true
+  use_default: 1
 favicon:
-  use_default: true
+  use_default: 1
 ucb_campus_header_color: '1'
 ucb_header_color: '3'
 ucb_sidebar_position: '0'
 ucb_be_boulder: '1'
-ucb_rave_alerts: true
+ucb_rave_alerts: 1
 ucb_gtm_account: ''
-ucb_secondary_menu: false
-ucb_footer_menu: false
+ucb_secondary_menu: 0
+ucb_footer_menu: 0
+ucb_social_share_position: '0'
