CuBoulder/tiamat-theme#28 adds files associated with the hero unit paragraph

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -54,3 +54,11 @@ ucb-site-contact-info-footer:
   css:
     theme:
       css/ucb-site-contact-info-footer.css: {}
+
+ucb-hero-unit:
+  version: 1.x
+  js:
+    js/ucb-hero-unit.js: {}
+  css:
+    theme:
+      css/ucb-hero-unit.css: {}
