Files from ucb2021

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -124,3 +124,11 @@ ucb-slider:
   css:
     theme:
       css/block/slider.css: {}
+
+ucb-related-articles:
+  version: 1.x
+  js:
+    js/ucb-related-articles.js: {}
+  css:
+    theme:
+      css/ucb-related-articles.css: {}
