Templates for Newsletter from ucb2021 with Tiamat fixes

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -153,3 +153,9 @@ ucb-related-articles:
   css:
     theme:
       css/ucb-related-articles.css: {}
+      
+ucb-newsletter:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-newsletter.css: {}
