Added newsletter logic to convert relative urls to absolute, convert computed styles to inline and copy result to clipboard

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -156,6 +156,8 @@ ucb-related-articles:
       
 ucb-newsletter:
   version: 1.x
+  js:
+    js/ucb-newsletter.js: {}
   css:
     theme:
       css/ucb-newsletter.css: {}
