chg: CSS updates for Article Page Styles

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -37,6 +37,12 @@ ucb-article:
       css/ucb-article.css: {}
       css/hero-unit.css: {}
 
+ucb-article-dark:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-article-dark.css: {}
+
 ucb-article-list:
   version: 1.x
   js:
