--- a/config/install/boulderD9_base.settings.yml
+++ b/config/install/boulderD9_base.settings.yml
@@ -6,7 +6,9 @@ features:
 logo:
   use_default: 1
 favicon:
-  use_default: 1
+  use_default: 0
+  path: themes/custom/boulder_d9_base/favicon.png
+  mimetype: image/png
 ucb_campus_header_color: '1'
 ucb_header_color: '3'
 ucb_sidebar_position: '0'
