--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -70,17 +70,24 @@ ucb-people-list-page:
   css:
     theme:
       css/ucb-people-list.css: {}
-ucb-site-contact-info-footer:
-  version: 1.x
-  css:
-    theme:
-      css/ucb-site-contact-info-footer.css: {}
 
 ucb-how-to-page:
   version: 1.x
   css:
     theme:
       css/ucb-how-to-page.css: {}
+
+ucb-breadcrumb:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-breadcrumb.css: {}
+    
+ucb-site-contact-info-footer:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-site-contact-info-footer.css: {}
       
 ucb-hero-unit:
   version: 1.x
