--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -21,6 +21,7 @@ ucb-global:
     js/bootstrap/bootstrap.min.js: {}
     js/fontawesome/all.min.js: {}
     js/ucb-rave-alert.js: {}
+    js/parallaxie.js: {}
   dependencies:
     - core/drupal
 
