#166 adds CSS library for Content List

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -126,6 +126,12 @@ ucb-content-grid:
     theme:
       css/block/content-grid.css: {}
 
+ucb-content-list:
+  version: 1.x
+  css:
+    theme:
+      css/block/content-list.css: {}
+
 ucb-content-row:
   version: 1.x
   css:
