--- a/config/install/boulderD9_base.settings.yml
+++ b/config/install/boulderD9_base.settings.yml
@@ -15,8 +15,10 @@ ucb_sidebar_position: '0'
 ucb_be_boulder: '1'
 ucb_rave_alerts: 1
 ucb_gtm_account: ''
-ucb_secondary_menu: 0
-ucb_footer_menu: 0
+ucb_secondary_menu_default_links: 0
+ucb_secondary_menu_position: inline
+ucb_secondary_menu_button_display: 0
+ucb_footer_menu_default_links: 0
 ucb_social_share_position: '0'
 ucb_breadcrumb_nav: 1
 ucb_date_format:  '0'
