wip: first pass at site config provided services

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -193,3 +193,18 @@ ucb-newsletter:
   css:
     theme:
       css/ucb-newsletter.css: {}
+
+livechat:
+  version: 1.x
+  js:
+    js/livechat.js: {}
+
+statuspage:
+  version: 1.x
+  js:
+    js/statuspage.js: {}
+    
+mainstay:
+  version: 1.x
+  js:
+    js/mainstay.js: {}
