wip: Twig template for Issue Node

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -221,4 +221,8 @@ ucb-status-page:
   css:
     theme:
       css/ucb-status-page-block.css: {}
-
+ucb-issue:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-issue.css: {}
