wip: Link styling, button only appears on email version of newsletter page

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -194,8 +194,6 @@ ucb-related-articles:
       
 ucb-newsletter:
   version: 1.x
-  js:
-    js/ucb-newsletter.js: {}
   css:
     theme:
       css/ucb-newsletter.css: {}
@@ -270,3 +268,10 @@ ucb-issue-archive:
   css:
     theme:
       css/ucb-issue-archive.css: {}
+ucb-newsletter-email:
+  version: 1.x
+  js:
+    js/ucb-newsletter.js: {}
+  css:
+    theme:
+      css/ucb-newsletter.css: {}
