--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -214,6 +214,14 @@ mainstay:
   version: 1.x
   js:
     js/mainstay.js: {}
+
+timelinejs:
+  version: 3.x
+  js:
+    js/timelinejs/timeline-min.js: {}
+  css:
+    theme:
+      css/timelinejs/timeline.css: {}
       
 ucb-slate-form:
   version: 1.x
