Vertical Content Sequence

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -291,3 +291,8 @@ ucb-newsletter-email:
   css:
     theme:
       css/ucb-newsletter.css: {}
+ucb-content-sequence:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-content-sequence.css: {}
