--- a/boulderD9_base.info.yml
+++ b/boulderD9_base.info.yml
@@ -5,6 +5,9 @@ core_version_requirement: ^9 || ^10
 type: theme
 base theme: stable9
 
+dependencies:
+  - core/drupalSettings
+
 libraries: 
   - boulderD9_base/ucb-global
 
