wip: initial file setup

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -311,3 +311,10 @@ ucb-content-sequence:
   css:
     theme:
       css/block/ucb-content-sequence.css: {}
+ucb-article-feature-block:
+  version: 1.x
+  js:
+    js/ucb-article-feature-block.js: {}
+  css:
+    theme:
+      css/block/ucb-article-feature-block.css: {}
