--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -325,3 +325,12 @@ ucb-article-feature-block:
   css:
     theme:
       css/block/ucb-article-feature-block.css: {}
+ucb-article-slider-block:
+  version: 1.x
+  js:
+    js/flickity/flickity.pkgd.min.js: {}
+    js/ucb-article-slider-block.js: {}
+  css:
+    theme:
+      css/flickity/flickity.min.css: {}
+      css/block/ucb-article-slider-block.css: {}
