wip: init code from article list block, gets data with byline for secondary api calls

--- a/boulderD9_base.libraries.yml
+++ b/boulderD9_base.libraries.yml
@@ -58,6 +58,8 @@ ucb-user-login:
 
 ucb-person:
   version: 1.x
+  js:
+    js/ucb-person-article-list.js: {}
   css:
     theme:
       css/ucb-person.css: {}
