css library for user page

--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -409,3 +409,9 @@ ucb-people-list-block:
   css:
     theme:
       css/block/ucb-people-list-block.css: {}
+
+ucb-user-profile:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-user-profile.css: {}
