CuBoulder/tiamat-theme#516 adds heading font setting

--- a/config/install/boulder_base.settings.yml
+++ b/config/install/boulder_base.settings.yml
@@ -22,3 +22,4 @@ ucb_footer_menu_default_links: 0
 ucb_social_share_position: '0'
 ucb_breadcrumb_nav: 1
 ucb_use_custom_logo: false
+ucb_heading_font: 'bold'
