--- a/config/install/boulder_base.settings.yml
+++ b/config/install/boulder_base.settings.yml
@@ -16,7 +16,7 @@ ucb_be_boulder: '1'
 ucb_rave_alerts: 1
 ucb_sticky_menu: 0
 ucb_secondary_menu_default_links: 0
-ucb_secondary_menu_position: inline
+ucb_secondary_menu_position: above
 ucb_secondary_menu_button_display: 0
 ucb_footer_menu_default_links: 0
 ucb_social_share_position: '0'
