--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -457,3 +457,9 @@ ucb-user-page:
     theme:
       css/ucb-status-page-block.css: {}
       css/ucb-user-page.css: {}
+      
+ucb-class-notes:
+  version: 1.x
+  css:
+    theme:
+      css/ucb-class-notes.css: {}
