wip: base files for Class Note List Page

--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -463,3 +463,11 @@ ucb-class-notes:
   css:
     theme:
       css/ucb-class-notes.css: {}
+
+ucb-class-notes-list-page:
+  version: 1.x
+  js:
+    js/ucb-class-notes-list.js: {}
+  css:
+    theme:
+      css/ucb-class-notes-list.css: {}
