wip: add/removes hash on url on question click

--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -460,6 +460,8 @@ ucb-user-page:
       
 ucb-faq-page:
   version: 1.x
+  js:
+    js/ucb-faq-page.js: {}
   css:
     theme:
       css/ucb-faq-page.css: {}
