--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -26,6 +26,7 @@ migrate_styles: # just for migration
   css:
     theme:
       css/migrate-list-styles.css: {}
+      https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css: { type: external, minified: true }
 
 ucb-page:
   version: 1.x
