Notes on info.yml

--- a/boulder_base.info.yml
+++ b/boulder_base.info.yml
@@ -7,7 +7,7 @@ base theme: stable9
 
 libraries: 
   - boulder_base/ucb-global
-  - boulder_base/migrate_styles  # Add your custom library here
+  - boulder_base/migrate_styles # Needed for css polyfill during migration
 
 regions:
   header: "Header"
