--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -6,13 +6,14 @@ ucb-global:
       css/layout.css: {}
     theme:
       https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap: { type: external }
-      css/style.css: {}
       css/style-responsive.css: {}
       css/styleguide/branding.css: {}
       css/styleguide/buttons.css: {}
       css/styleguide/colors.css: {}
       css/styleguide/type.css: {}
       css/styleguide/icons.css: {}
+      css/style.css: {}
+      css/block/block-styles.css: {}
   ckeditor5-stylesheets:
     - css/base-ckeditor5.css
   js:
