--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -13,6 +13,7 @@ ucb-global:
       css/styleguide/type.css: {}
       css/styleguide/icons.css: {}
       css/style.css: {}
+      css/layout-builder-styles.css: {}
       css/block/block-styles.css: {}
   ckeditor5-stylesheets:
     - css/base-ckeditor5.css
