--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -7,11 +7,11 @@ ucb-global:
     theme:
       https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap: { type: external }
       css/style-responsive.css: {}
-      css/styleguide/branding.css: {}
-      css/styleguide/buttons.css: {}
-      css/styleguide/colors.css: {}
-      css/styleguide/type.css: {}
-      css/styleguide/icons.css: {}
+      css/styleguide/elements/branding.css: {}
+      css/styleguide/elements/buttons.css: {}
+      css/styleguide/elements/colors.css: {}
+      css/styleguide/elements/type.css: {}
+      css/styleguide/elements/icons.css: {}
       css/style.css: {}
       css/layout-builder-styles.css: {}
       css/block/block-styles.css: {}
