--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -121,6 +121,7 @@ ucb-image-gallery:
   js:
     js/glightbox/glightbox.min.js: {}
     js/glightbox/ucb-gallery-lightbox-settings.js: {}
+    js/masonry/masonry.pkgd.min.js: {}
   css:
     theme:
       css/block/image-gallery.css: {}
