--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -17,6 +17,7 @@ ucb-global:
       css/layout-builder-styles.css: {}
       css/block/block-styles.css: {}
       css/ucb-accordion-styles.css: {}
+      css/ucb-print.css: { media: print }
   ckeditor5-stylesheets:
     - css/base-ckeditor5.css
   js:
