--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -5,7 +5,7 @@ ucb-global:
       css/bootstrap/bootstrap.min.css: {}
       css/layout.css: {}
     theme:
-      https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap: { type: external }
+      https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;500;700&display=swap: { type: external }
       css/style-responsive.css: {}
       css/styleguide/global.css: {}
       css/styleguide/branding.css: {}
