css tweaks, adding in default value that matches the latest release and replacing the screenshot

--- a/config/install/boulder_base.settings.yml
+++ b/config/install/boulder_base.settings.yml
@@ -22,4 +22,4 @@ ucb_footer_menu_default_links: 0
 ucb_breadcrumb_nav: 1
 ucb_use_custom_logo: false
 ucb_heading_font: 'bold'
-web_express_version: ''
+web_express_version: '20240904'
