--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -324,6 +324,9 @@ ucb-faculty-publications:
   version: 1.x
   js:
     js/ucb-faculty-publications.js: {}
+  css:
+    theme:
+      css/ucb-faculty-publications.css: {}
 
 ucb-brand-bar:
   version: 1.x
