--- a/.github/workflows/developers-sandbox-ci.yml
+++ b/.github/workflows/developers-sandbox-ci.yml
@@ -5,13 +5,5 @@ on:
 
 jobs:
   run-ci:
-    runs-on: ubuntu-latest
-    steps:
-      - name: call remote workflow
-        run: | 
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: Bearer ${{ secrets.PAT }}" \
-            https://api.github.com/repos/CuBoulder/pantheon-upstream-tiamat-developers-sandbox/actions/workflows/ci.yml/dispatches \
-            -d '{"ref":"master"}'
+    uses: CuBoulder/action-collection/.github/workflows/trigger-dev-ci.yml@main
+    secrets: inherit
