--- a/config/install/boulder_base.settings.yml
+++ b/config/install/boulder_base.settings.yml
@@ -22,4 +22,7 @@ ucb_footer_menu_default_links: 0
 ucb_breadcrumb_nav: 1
 ucb_use_custom_logo: false
 ucb_heading_font: 'bold'
+ucb_above_content_region_color: 'white'
+ucb_after_content_one_region_color: 'white'
+ucb_after_content_two_region_color: 'white'
 web_express_version: '20241030'
