js and libraries update
Rename js file
Move js from block level to global (this handles the accordion ckeditor as well so it needs to be attached to every page)
Remove redundant expandable from libraries

--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -21,6 +21,7 @@ ucb-global:
   js:
     js/bootstrap/bootstrap.min.js: {}
     js/ucb-rave-alert.js: {}
+    js/ucb-expandable-content.js: {}
   dependencies:
     - core/drupal
 
@@ -126,13 +127,6 @@ ucb-image-gallery:
     theme:
       css/block/image-gallery.css: {}
       js/glightbox/glightbox.min.css: {}
-
-ucb-expandable-content:
-  version: 1.x
-  js:
-    js/expandable-content.js: {}
-  css:
-    theme:
 
 ucb-content-grid:
   version: 1.x
