CuBoulder/tiamat-theme#1461 Changes to displaying the actual theme version on as the Web Express version

--- a/boulder_base.info.yml
+++ b/boulder_base.info.yml
@@ -1,6 +1,7 @@
 name: "University of Colorado Boulder base theme"
 description: "Drupal 10+ theme for CU Boulder branded web properties"
-package: Custom
+version: '20241122'
+package: CU Boulder
 core_version_requirement: ^10.1
 type: theme
 base theme: stable9
