--- a/boulder_base.info.yml
+++ b/boulder_base.info.yml
@@ -1,7 +1,7 @@
 name: "University of Colorado Boulder base theme"
 description: "Drupal 10+ theme for CU Boulder branded web properties"
 package: Custom
-core_version_requirement: ^10.1
+core_version_requirement: '^10.1 || ^11'
 type: theme
 base theme: stable9
 
