Hero Slider Content Type
Create the new Hero Slider block and paragraph, along with relevant styling.

Block information :

time per slide (probably a integer input for number of ms between 500 and 6000 or something reasonable. Open to other suggestions though). This will dictate how long each slide should display.
Default Text Color (I think we allow light and dark options here). This will be the default font color (white with a black text shadow or black with a light text shadow).
Slides (entity reference to Hero Slide paragraph content type)
Paragraph should include :

Text (plain text, no html )
Override color (light or dark) if this slide should deviate from the default color for text on slides
Image (media reference)
Text Vertical (top, middle, bottom)
Text Horizontal (left, center, right)

--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -167,6 +167,12 @@ ucb-slider:
     theme:
       css/block/slider.css: { weight: 5 }
 
+ucb-hero-slider:
+  version: 1.x
+  css:
+    theme:
+      css/block/hero-slider.css: { weight: 5 }
+
 ucb-text-block:
   version: 1.x
   css:
