Buttons and sizing
Replaced fixed 100vh height with responsive aspect-ratio (16/9 desktop, 4/3 tablet, 3/4 mobile). Set max-height: 100vh, used relative positioning, and ensured images scale properly with object-fit: cover.

Added restart and pause/play buttons

--- a/boulder_base.libraries.yml
+++ b/boulder_base.libraries.yml
@@ -172,6 +172,8 @@ ucb-hero-slider:
   css:
     theme:
       css/block/hero-slider.css: { weight: 5 }
+  js:
+    js/block/hero-slider.js: { }
 
 ucb-text-block:
   version: 1.x
